--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#certifications">Certifications</a></li>
           <li><a href="#contact">Contact</a></li>
+
         </ul>
       </nav>
       <div class="header-text">
@@ -32,7 +35,7 @@
     <div class="container">
       <div class="row">
         <div class="about-col-1">
-          <img src="Images/mypic.png" alt="Profile Picture">
+          <img src="Images/Hero.jpg" alt="Profile Picture">
         </div>
         <div class="about-col-2">
           <h1 class="sub-title">About Me</h1>
@@ -56,17 +59,16 @@
 
           <div class="tab-contents" id="Experience">
             <ul>
-              <li><span>Content Writer Intern - TeamEverest (Feb–Mar 2024)</span></li>
-              <li><span>Railway Reservation System Developer (Feb–Mar 2024)</span></li>
-              <li><span>AI Research Projects & Deployments (2024–Present)</span></li>
+              <li><span>Azure AI Intern – Edunet Foundation (May–Jun 2025)</span><br>Hands-on training in AI/ML, Generative AI, and Azure tools.</li>
+              <li><span>Content Writer – TeamEverest NGO (Feb–Mar 2024)</span><br>Created impactful social content.</li>
             </ul>
           </div>
 
           <div class="tab-contents" id="Education">
             <ul>
-              <li><span>B.Tech CSE, KIIT University (2022–2026)</span> — CGPA: 8.35</li>
-              <li><span>12th, Kendriya Vidyalaya (2021–22)</span> — 80%</li>
-              <li><span>10th, Kendriya Vidyalaya (2019–20)</span></li>
+              <li><span>B.Tech CSE, KIIT University (2022–2026)</span> — CGPA: 8.42</li>
+              <li><span>12th, Kendriya Vidyalaya (2021–22)</span> — 76.66%</li>
+              <li><span>10th, Kendriya Vidyalaya (2019–20)</span> - 82.33</li>
             </ul>
           </div>
         </div>
@@ -125,6 +127,32 @@
     </div>
   </div>
 
+
+    <!-- Projects Section -->
+  <div id="projects" class="container">
+    <h1 class="sub-title">Projects</h1>
+    <div class="work-list">
+      <div class="work"><h3>Crop Disease Detection</h3><p>Using MobileNetV2 on PlantVillage dataset</p></div>
+      <div class="work"><h3>Ice Cream Revenue Predictor</h3><p>Linear Regression + Streamlit</p></div>
+      <div class="work"><h3>Grammar Scoring Engine</h3><p>MFCCs, Regression, RMSE evaluation</p></div>
+      <div class="work"><h3>Traffic Anomaly Detection</h3><p>CNN+LSTM for traffic video feeds</p></div>
+      <div class="work"><h3>TravelSync</h3><p>Group travel AI planner</p></div>
+      <div class="work"><h3>Sargam Platform</h3><p>Online music learning backend</p></div>
+    </div>
+  </div>
+
+
+    <!-- Certifications Section -->
+  <div id="certifications" class="container">
+    <h1 class="sub-title">Certifications</h1>
+    <ul>
+      <li><span>Git and GitHub – Exelr</span></li>
+      <li><span>Python and SQL – Exelr</span></li>
+      <li><span>Health Systems Development – Coursera</span></li>
+    </ul>
+  </div>
+
+
   <!-- Contact Section -->
   <div id="contact">
     <div class="container">
@@ -135,7 +163,7 @@
           <p><i class="fa-solid fa-paper-plane"></i> rbose7236@gmail.com</p>
           <div class="social-icons">
             <a href="https://linkedin.com/in/rohan-bose-328b58278/"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://huggingface.co/rohanbose"><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/Coderush2004"><i class="fa-brands fa-github"></i></a>
           </div>
           <a href="Images/Resume.pdf" download class="btn btn2">Download CV</a>
         </div>
@@ -169,10 +197,6 @@
   themeToggle.addEventListener('click', () => {
     document.body.classList.toggle('light-theme');
   });
-</script>
-
-  
-
-  
+</script> 
 </body>
 </html>
